--- a/src/style.css
+++ b/src/style.css
@@ -12,6 +12,12 @@ body {
   padding: 0 4rem;
 }
 
+@media (max-width: 550px) {
+  .container {
+    padding: 0;
+  }
+}
+
 .navbar {
   background: #fff;
 }
@@ -19,6 +25,10 @@ body {
 .navbar-brand {
   font-size: 2rem;
   color: #2196F3;
+}
+
+.navbar-toggler {
+  margin-top: .5rem;
 }
 
 .navbar .navbar-nav .nav-link {
@@ -74,7 +84,7 @@ body {
   width: 1rem;
   height: 1rem;
   border-radius: 50%;
-  
+
   display: inline-block;
   float: left;
   margin: 0 .25rem;
@@ -97,9 +107,15 @@ body {
   color: #fff;
   
   margin: 0;
-  padding: 1.5rem 3rem;
+  padding: 1.5rem 1.5rem;
   
   font-family: monospace;
+}
+
+@media (max-width: 430px){
+  .terminal .shell {
+    padding: 1.5rem 0.5rem;
+  }
 }
 
 .terminal .shell li::before {
