Make link static

--- a/css/style.css
+++ b/css/style.css
@@ -28,7 +28,7 @@ body {
   background: #fff;
 }
 
-.navbar-light .navbar-brand {
+.navbar-light .navbar-brand, .navbar-light .navbar-brand:hover, .navbar-light .navbar-brand:visited {
   font-size: 2rem;
   color: #2196F3;
 }
