Fix code formatting

--- a/css/style.css
+++ b/css/style.css
@@ -24,7 +24,9 @@ body {
   }
 }
 
-.navbar-light .navbar-brand, .navbar-light .navbar-brand:hover, .navbar-light .navbar-brand:visited {
+.navbar-light .navbar-brand,
+.navbar-light .navbar-brand:hover,
+.navbar-light .navbar-brand:visited {
   font-size: 2rem;
   color: #2196F3;
 }
