--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,9 @@
+/**
+* @file css/style.css
+* @license MIT
+* @copyright 2017 10244872 Canada Inc.
+*/
+
 html,
 body {
   height: 100%;
@@ -12,13 +18,21 @@ body {
   padding: 0 4rem;
 }
 
-.navbar {
-  background: #fff;
+@media (max-width: 550px) {
+  .container {
+    padding: 0;
+  }
 }
 
-.navbar-brand {
+.navbar-light .navbar-brand,
+.navbar-light .navbar-brand:hover,
+.navbar-light .navbar-brand:visited {
   font-size: 2rem;
   color: #2196F3;
+}
+
+.navbar-toggler {
+  margin-top: .5rem;
 }
 
 .navbar .navbar-nav .nav-link {
@@ -74,7 +88,7 @@ body {
   width: 1rem;
   height: 1rem;
   border-radius: 50%;
-  
+
   display: inline-block;
   float: left;
   margin: 0 .25rem;
@@ -97,9 +111,15 @@ body {
   color: #fff;
   
   margin: 0;
-  padding: 1.5rem 3rem;
+  padding: 1.5rem;
   
   font-family: monospace;
+}
+
+@media (max-width: 430px){
+  .terminal .shell {
+    padding: 1.5rem 0.5rem;
+  }
 }
 
 .terminal .shell li::before {
